MiniML-Comp/_build/default/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On TYPE shift to state 1
-- On type_def shift to state 25
-- On program shift to state 27
-- On list(type_def) shift to state 28
## Reductions:
-- On SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production list(type_def) ->

State 1:
## Known stack suffix:
## TYPE
## LR(1) items:
type_def -> TYPE . IDENT EQ separated_nonempty_list(BAR,cstr_def) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## TYPE IDENT
## LR(1) items:
type_def -> TYPE IDENT . EQ separated_nonempty_list(BAR,cstr_def) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On EQ shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## TYPE IDENT EQ
## LR(1) items:
type_def -> TYPE IDENT EQ . separated_nonempty_list(BAR,cstr_def) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On CSTR shift to state 4
-- On separated_nonempty_list(BAR,cstr_def) shift to state 21
-- On cstr_def shift to state 22
## Reductions:

State 4:
## Known stack suffix:
## CSTR
## LR(1) items:
cstr_def -> CSTR . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
cstr_def -> CSTR . OF separated_nonempty_list(STAR,simple_ty) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
-- On OF shift to state 5
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR
--   reduce production cstr_def -> CSTR

State 5:
## Known stack suffix:
## CSTR OF
## LR(1) items:
cstr_def -> CSTR OF . separated_nonempty_list(STAR,simple_ty) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On simple_ty shift to state 17
-- On separated_nonempty_list(STAR,simple_ty) shift to state 20
## Reductions:

State 6:
## Known stack suffix:
## TINT
## LR(1) items:
simple_ty -> TINT . [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW
--   reduce production simple_ty -> TINT

State 7:
## Known stack suffix:
## TBOOL
## LR(1) items:
simple_ty -> TBOOL . [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW
--   reduce production simple_ty -> TBOOL

State 8:
## Known stack suffix:
## LPAR
## LR(1) items:
simple_ty -> LPAR . ty RPAR [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 10
-- On simple_ty shift to state 13
## Reductions:

State 9:
## Known stack suffix:
## IDENT
## LR(1) items:
simple_ty -> IDENT . [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW
--   reduce production simple_ty -> IDENT

State 10:
## Known stack suffix:
## LPAR ty
## LR(1) items:
simple_ty -> LPAR ty . RPAR [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
ty -> ty . ARROW ty [ STAR RPAR ARROW ]
ty -> ty . STAR ty [ STAR RPAR ARROW ]
## Transitions:
-- On STAR shift to state 11
-- On RPAR shift to state 14
-- On ARROW shift to state 15
## Reductions:

State 11:
## Known stack suffix:
## ty STAR
## LR(1) items:
ty -> ty STAR . ty [ STAR RPAR EQ ARROW ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 12
-- On simple_ty shift to state 13
## Reductions:

State 12:
## Known stack suffix:
## ty STAR ty
## LR(1) items:
ty -> ty . ARROW ty [ STAR RPAR EQ ARROW ]
ty -> ty . STAR ty [ STAR RPAR EQ ARROW ]
ty -> ty STAR ty . [ STAR RPAR EQ ARROW ]
## Transitions:
## Reductions:
-- On STAR RPAR EQ ARROW
--   reduce production ty -> ty STAR ty

State 13:
## Known stack suffix:
## simple_ty
## LR(1) items:
ty -> simple_ty . [ STAR RPAR EQ ARROW ]
## Transitions:
## Reductions:
-- On STAR RPAR EQ ARROW
--   reduce production ty -> simple_ty

State 14:
## Known stack suffix:
## LPAR ty RPAR
## LR(1) items:
simple_ty -> LPAR ty RPAR . [ TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR SND RPAR NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST EQ CSTR BOOL BAR ARROW
--   reduce production simple_ty -> LPAR ty RPAR

State 15:
## Known stack suffix:
## ty ARROW
## LR(1) items:
ty -> ty ARROW . ty [ STAR RPAR EQ ARROW ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 16
-- On simple_ty shift to state 13
## Reductions:

State 16:
## Known stack suffix:
## ty ARROW ty
## LR(1) items:
ty -> ty . ARROW ty [ STAR RPAR EQ ARROW ]
ty -> ty ARROW ty . [ STAR RPAR EQ ARROW ]
ty -> ty . STAR ty [ STAR RPAR EQ ARROW ]
## Transitions:
-- On STAR shift to state 11
## Reductions:
-- On RPAR EQ
--   reduce production ty -> ty ARROW ty

State 17:
## Known stack suffix:
## simple_ty
## LR(1) items:
separated_nonempty_list(STAR,simple_ty) -> simple_ty . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
separated_nonempty_list(STAR,simple_ty) -> simple_ty . STAR separated_nonempty_list(STAR,simple_ty) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
-- On STAR shift to state 18
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR
--   reduce production separated_nonempty_list(STAR,simple_ty) -> simple_ty

State 18:
## Known stack suffix:
## simple_ty STAR
## LR(1) items:
separated_nonempty_list(STAR,simple_ty) -> simple_ty STAR . separated_nonempty_list(STAR,simple_ty) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On simple_ty shift to state 17
-- On separated_nonempty_list(STAR,simple_ty) shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## simple_ty STAR separated_nonempty_list(STAR,simple_ty)
## LR(1) items:
separated_nonempty_list(STAR,simple_ty) -> simple_ty STAR separated_nonempty_list(STAR,simple_ty) . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR
--   reduce production separated_nonempty_list(STAR,simple_ty) -> simple_ty STAR separated_nonempty_list(STAR,simple_ty)

State 20:
## Known stack suffix:
## CSTR OF separated_nonempty_list(STAR,simple_ty)
## LR(1) items:
cstr_def -> CSTR OF separated_nonempty_list(STAR,simple_ty) . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR ]
## Transitions:
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL BAR
--   reduce production cstr_def -> CSTR OF separated_nonempty_list(STAR,simple_ty)

State 21:
## Known stack suffix:
## TYPE IDENT EQ separated_nonempty_list(BAR,cstr_def)
## LR(1) items:
type_def -> TYPE IDENT EQ separated_nonempty_list(BAR,cstr_def) . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production type_def -> TYPE IDENT EQ separated_nonempty_list(BAR,cstr_def)

State 22:
## Known stack suffix:
## cstr_def
## LR(1) items:
separated_nonempty_list(BAR,cstr_def) -> cstr_def . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
separated_nonempty_list(BAR,cstr_def) -> cstr_def . BAR separated_nonempty_list(BAR,cstr_def) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On BAR shift to state 23
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production separated_nonempty_list(BAR,cstr_def) -> cstr_def

State 23:
## Known stack suffix:
## cstr_def BAR
## LR(1) items:
separated_nonempty_list(BAR,cstr_def) -> cstr_def BAR . separated_nonempty_list(BAR,cstr_def) [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On CSTR shift to state 4
-- On separated_nonempty_list(BAR,cstr_def) shift to state 24
-- On cstr_def shift to state 22
## Reductions:

State 24:
## Known stack suffix:
## cstr_def BAR separated_nonempty_list(BAR,cstr_def)
## LR(1) items:
separated_nonempty_list(BAR,cstr_def) -> cstr_def BAR separated_nonempty_list(BAR,cstr_def) . [ TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
## Reductions:
-- On TYPE SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production separated_nonempty_list(BAR,cstr_def) -> cstr_def BAR separated_nonempty_list(BAR,cstr_def)

State 25:
## Known stack suffix:
## type_def
## LR(1) items:
list(type_def) -> type_def . list(type_def) [ SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
-- On TYPE shift to state 1
-- On type_def shift to state 25
-- On list(type_def) shift to state 26
## Reductions:
-- On SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production list(type_def) ->

State 26:
## Known stack suffix:
## type_def list(type_def)
## LR(1) items:
list(type_def) -> type_def list(type_def) . [ SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL ]
## Transitions:
## Reductions:
-- On SND NOT MINUS MATCH LPAR LET INT IF IDENT FUN FST CSTR BOOL
--   reduce production list(type_def) -> type_def list(type_def)

State 27:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 28:
## Known stack suffix:
## list(type_def)
## LR(1) items:
program -> list(type_def) . expression EOF [ # ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 138
## Reductions:

State 29:
## Known stack suffix:
## SND
## LR(1) items:
expression -> SND . expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 137
## Reductions:

State 30:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . simple_expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On LPAR shift to state 31
-- On INT shift to state 33
-- On IDENT shift to state 34
-- On BOOL shift to state 35
-- On simple_expression shift to state 136
## Reductions:

State 31:
## Known stack suffix:
## LPAR
## LR(1) items:
simple_expression -> LPAR . expression RPAR [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 135
## Reductions:

State 32:
## Known stack suffix:
## MINUS
## LR(1) items:
expression -> MINUS . simple_expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On LPAR shift to state 31
-- On INT shift to state 33
-- On IDENT shift to state 34
-- On BOOL shift to state 35
-- On simple_expression shift to state 36
## Reductions:

State 33:
## Known stack suffix:
## INT
## LR(1) items:
simple_expression -> INT . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production simple_expression -> INT

State 34:
## Known stack suffix:
## IDENT
## LR(1) items:
simple_expression -> IDENT . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production simple_expression -> IDENT

State 35:
## Known stack suffix:
## BOOL
## LR(1) items:
simple_expression -> BOOL . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production simple_expression -> BOOL

State 36:
## Known stack suffix:
## MINUS simple_expression
## LR(1) items:
expression -> MINUS simple_expression . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production expression -> MINUS simple_expression

State 37:
## Known stack suffix:
## MATCH
## LR(1) items:
expression -> MATCH . expression WITH cases [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 119
## Reductions:

State 38:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression COMMA expression RPAR [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
simple_expression -> LPAR . expression RPAR [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 114
## Reductions:

State 39:
## Known stack suffix:
## LET
## LR(1) items:
expression -> LET . IDENT list(typed_ident) EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
expression -> LET . REC IDENT list(typed_ident) COLON ty EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On REC shift to state 40
-- On IDENT shift to state 108
## Reductions:

State 40:
## Known stack suffix:
## LET REC
## LR(1) items:
expression -> LET REC . IDENT list(typed_ident) COLON ty EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On IDENT shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## LET REC IDENT
## LR(1) items:
expression -> LET REC IDENT . list(typed_ident) COLON ty EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On LPAR shift to state 42
-- On typed_ident shift to state 47
-- On list(typed_ident) shift to state 49
## Reductions:
-- On COLON
--   reduce production list(typed_ident) ->

State 42:
## Known stack suffix:
## LPAR
## LR(1) items:
typed_ident -> LPAR . IDENT COLON ty RPAR [ LPAR EQ COLON ARROW ]
## Transitions:
-- On IDENT shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## LPAR IDENT
## LR(1) items:
typed_ident -> LPAR IDENT . COLON ty RPAR [ LPAR EQ COLON ARROW ]
## Transitions:
-- On COLON shift to state 44
## Reductions:

State 44:
## Known stack suffix:
## LPAR IDENT COLON
## LR(1) items:
typed_ident -> LPAR IDENT COLON . ty RPAR [ LPAR EQ COLON ARROW ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 45
-- On simple_ty shift to state 13
## Reductions:

State 45:
## Known stack suffix:
## LPAR IDENT COLON ty
## LR(1) items:
ty -> ty . ARROW ty [ STAR RPAR ARROW ]
ty -> ty . STAR ty [ STAR RPAR ARROW ]
typed_ident -> LPAR IDENT COLON ty . RPAR [ LPAR EQ COLON ARROW ]
## Transitions:
-- On STAR shift to state 11
-- On RPAR shift to state 46
-- On ARROW shift to state 15
## Reductions:

State 46:
## Known stack suffix:
## LPAR IDENT COLON ty RPAR
## LR(1) items:
typed_ident -> LPAR IDENT COLON ty RPAR . [ LPAR EQ COLON ARROW ]
## Transitions:
## Reductions:
-- On LPAR EQ COLON ARROW
--   reduce production typed_ident -> LPAR IDENT COLON ty RPAR

State 47:
## Known stack suffix:
## typed_ident
## LR(1) items:
list(typed_ident) -> typed_ident . list(typed_ident) [ EQ COLON ]
## Transitions:
-- On LPAR shift to state 42
-- On typed_ident shift to state 47
-- On list(typed_ident) shift to state 48
## Reductions:
-- On EQ COLON
--   reduce production list(typed_ident) ->

State 48:
## Known stack suffix:
## typed_ident list(typed_ident)
## LR(1) items:
list(typed_ident) -> typed_ident list(typed_ident) . [ EQ COLON ]
## Transitions:
## Reductions:
-- On EQ COLON
--   reduce production list(typed_ident) -> typed_ident list(typed_ident)

State 49:
## Known stack suffix:
## LET REC IDENT list(typed_ident)
## LR(1) items:
expression -> LET REC IDENT list(typed_ident) . COLON ty EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On COLON shift to state 50
## Reductions:

State 50:
## Known stack suffix:
## LET REC IDENT list(typed_ident) COLON
## LR(1) items:
expression -> LET REC IDENT list(typed_ident) COLON . ty EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On TINT shift to state 6
-- On TBOOL shift to state 7
-- On LPAR shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 51
-- On simple_ty shift to state 13
## Reductions:

State 51:
## Known stack suffix:
## LET REC IDENT list(typed_ident) COLON ty
## LR(1) items:
expression -> LET REC IDENT list(typed_ident) COLON ty . EQ expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
ty -> ty . ARROW ty [ STAR EQ ARROW ]
ty -> ty . STAR ty [ STAR EQ ARROW ]
## Transitions:
-- On STAR shift to state 11
-- On EQ shift to state 52
-- On ARROW shift to state 15
## Reductions:

State 52:
## Known stack suffix:
## LET REC IDENT list(typed_ident) COLON ty EQ
## LR(1) items:
expression -> LET REC IDENT list(typed_ident) COLON ty EQ . expression IN expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 105
## Reductions:

State 53:
## Known stack suffix:
## IF
## LR(1) items:
expression -> IF . expression THEN expression ELSE expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 100
## Reductions:

State 54:
## Known stack suffix:
## FUN
## LR(1) items:
expression -> FUN . typed_ident ARROW expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On LPAR shift to state 42
-- On typed_ident shift to state 55
## Reductions:

State 55:
## Known stack suffix:
## FUN typed_ident
## LR(1) items:
expression -> FUN typed_ident . ARROW expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On ARROW shift to state 56
## Reductions:

State 56:
## Known stack suffix:
## FUN typed_ident ARROW
## LR(1) items:
expression -> FUN typed_ident ARROW . expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 99
## Reductions:

State 57:
## Known stack suffix:
## FST
## LR(1) items:
expression -> FST . expression [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On expression shift to state 98
## Reductions:

State 58:
## Known stack suffix:
## CSTR
## LR(1) items:
expression -> CSTR . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
expression -> CSTR . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On LPAR shift to state 59
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production expression -> CSTR

State 59:
## Known stack suffix:
## CSTR LPAR
## LR(1) items:
expression -> CSTR LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
-- On SND shift to state 29
-- On NOT shift to state 30
-- On MINUS shift to state 32
-- On MATCH shift to state 37
-- On LPAR shift to state 38
-- On LET shift to state 39
-- On INT shift to state 33
-- On IF shift to state 53
-- On IDENT shift to state 34
-- On FUN shift to state 54
-- On FST shift to state 57
-- On CSTR shift to state 58
-- On BOOL shift to state 35
-- On simple_expression shift to state 60
-- On separated_nonempty_list(COMMA,expression) shift to state 61
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 62
-- On expression shift to state 64
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 60:
## Known stack suffix:
## simple_expression
## LR(1) items:
expression -> simple_expression . [ WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND ]
## Transitions:
## Reductions:
-- On WITH THEN STAR SLASH RPAR PLUS OR NEQ MOD MINUS LT LSR LSL LPAR LE INT IN IDENT GT GE EQ EOF ELSE COMMA BOOL BAR AND
--   reduce production expression -> simple_expression
